base/applications/resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
        - name: resume
          image: ekalkutin/resume:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '100m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
