base/applications/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  namespace: applications
spec:
  type: ClusterIP
  selector:
    app: resume
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
