base/applications/resume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: applications
  labels:
    app: resume
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Default cache for all requests
      add_header Cache-Control "public, max-age=2592000";   # 1 month
      # Override for specific file types
      if ($request_uri ~* \.(css|webp)$) { 
        add_header Cache-Control "public, max-age=2592000"; # 1 monthy
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kalkutin.dev
      secretName: kalkutin-dev-tls-secret
  rules:
    - host: kalkutin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 3000
